--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
              *  Adicionar um botão e um event handler 
              *  e o botão torna o quadrado rosa.
              */
+            const body = document.getElementsByTagName("body")
+            const button = document.createElement('button')
+            button.id = 'pink_button'
+            button.innerText = 'Pink'
+            document.body.append(button)
+
+            const pink_button = document.getElementById("pink_button")
+            pink_button.onclick = function () {
+                color_box.className = "pink"
+            }
+
         </script>
 
         <hr>
@@ -53,6 +64,8 @@
                  *  atualiza o conteúdo de texto do "countspan" 
                  *  e mostra o valor atual de "count".
                  */
+                count += 1
+                countspan.innerText = `${count}`
             }
         </script>
 
@@ -68,6 +81,11 @@
                  * A função mostra um "alert dialog" mostrando se o contador 
                  * (da segunda tarefa (TODO 2)) é par ou impar.
                  */
+                if (count % 2 !== 0){
+                    window.alert(`O contador eh impar.`)
+                } else {
+                    window.alert(`O contador eh par.`)
+                }
             }
         </script>
     </body>
